--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Jaeeun 'Riley' Cho
+name: devops_roadmap.yaml
 
 # Short bio or description (displayed in the header)
-description: DevOps Dev Wannabe
+description: composed by 조재은
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
