--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: devops_roadmap.yaml
 description: composed by 조재은
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://miro.medium.com/max/640/1*wKKuDHNaSyILxvnCEEVHYQ.jpeg
 
 #
 # Flags below are optional
